# dv-commandline-utils

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  archive-release.sh  docker-build.sh  docker-compose.override.yml.example  docker-compose.yml  docker-run.sh  tidy.sh
Docker/: Dockerfile
includes/: dvAccelerationRegularizer.h  dvAccelerationRegularizer.hxx  dvAnisotropicSmoothing.h  dvAssignCellDataByOctant.h  dvBinarizeMesh.h  dvBinaryOpening.h  dvBinaryThreshold.h  dvCalculateSurfaceAreas.h  dvCalculateTriangleCenters.h  dvCameraState.h  dvChangeInformation3D.h  dvChangeLabels.h  dvCollapse4D.h  dvConvertImage.h  dvConvertLabelsToMesh.h  dvConvertMesh.h  dvCycle.h  dvCyclicMean.h  dvDICOMHeaderAttributes.h  dvDeleteIsolatedPoints.h  dvEdgeLengthRegularizer.h  dvEdgeLengthRegularizer.hxx  dvEnforceBoundaryBetweenLabels.h  dvExplode4D.h  dvExtractConnectedComponents.h  dvExtractInterfaceBetweenSegments.h  dvExtractOrthogonalSlice.h  dvFillHolesInBinaryImage.h  dvFillHolesInSegmentation.h  dvFlipAlongAxes.h  dvGenerateInitialModel.h  dvGenerateInitialModel2.h  dvGetListOfColors.h  dvGetLookupTable.h  dvGetLowercaseFileExtension.h  dvGetVTKTransformationMatrixFromITKImage.h  dvGlobFiles.h  dvHeap.h  dvHeapSort.h  dvITKPointSetToCPDMatrix.h  (+66 more)
old/: dv-nonrigid-cpd.cxx  dv-read-dicom-tag.cxx  dvDICOMHeaderAttributes.h  dvITKPointSetToCPDMatrix.h  dvReadDICOMTag.cxx  dvReadDICOMTag.h  dvUpdateITKPointSetWithCPDMatrix.h
src/: CMakeLists.txt  dv-add-mesh-noise.cxx  dv-anisotropic-smoothing.cxx  dv-assign-materials-to-mesh-faces.cxx  dv-binarize-mesh.cxx  dv-binary-opening.cxx  dv-binary-threshold.cxx  dv-change-information-3d.cxx  dv-change-labels.cxx  dv-collapse-4d.cxx  dv-compare-image-information.cxx  dv-convert-dicom-series-to-volume.cxx  dv-convert-image.cxx  dv-convert-labels-to-mesh.cxx  dv-convert-mesh-to-stl-multiple.cxx  dv-convert-mesh-to-stl.cxx  dv-convert-mesh.cxx  dv-decimate-mesh.cxx  dv-dicom-information.cxx  dv-enforce-boundary-between-labels.cxx  dv-extract-connected-components.cxx  dv-extract-interface-between-segments.cxx  dv-extract-orthogonal-slice.cxx  dv-fill-holes-in-binary-image.cxx  dv-fill-holes-in-segmentation.cxx  dv-flip-along-axes-3d.cxx  dv-flip-along-axes.cxx  dv-image-information.cxx  dv-image-tile.cxx  dv-label-geometry.cxx  dv-mesh-area-volume.cxx  dv-mesh-information.cxx  dv-mesh-quality.cxx  dv-mesh-similarity-vertex-distance.cxx  dv-nonrigid-cpd.cxx  dv-overlay-labels.cxx  dv-permute-axes-3d.cxx  dv-plot-vectors.cxx  dv-read-dicom-tag.cxx  dv-resample-from-reference.cxx  (+25 more)
src/CMake/: DVPreventInBuildInstalls.cmake  DVPreventInSourceBuilds.cmake
src/includes/: dvAccelerationRegularizer.hxx  dvAnisotropicSmoothing.h  dvBinarizeMesh.h  dvBinaryOpening.h  dvBinaryThreshold.h  dvCalculateSurfaceAreas.h  dvCameraState.h  dvChangeInformation3D.h  dvChangeLabels.h  dvCollapse4D.h  dvConvertImage.h  dvConvertLabelsToMesh.h  dvConvertMesh.h  dvCycle.h  dvDeleteIsolatedPoints.h  dvDetermineNumberOfFiles.h  dvEdgeLengthRegularizer.h  dvEnforceBoundaryBetweenLabels.h  dvExtractConnectedComponents.h  dvExtractInterfaceBetweenSegments.h  dvExtractOrthogonalSlice.h  dvFillHolesInBinaryImage.h  dvFillHolesInSegmentation.h  dvFlipAlongAxes.h  dvFlipAlongAxes3D.h  dvGetLowercaseFileExtension.h  dvGetVTKTransformationMatrixFromITKImage.h  dvGlobFiles.h  dvHeap.h  dvHeapSort.h  dvITKPointSetToCPDMatrix.h  dvImageInformationFunctors.h  dvInsertionSort.h  dvJoin.h  dvLabelGeometry.h  dvMergeSort.h  dvMeshView.h  dvNumberOfSequentialFiles.h  dvOverlayLabels.h  dvPartition.h  (+20 more)
src/src/: dvCalculateSurfaceAreas.cxx  dvCameraState.cxx  dvDetermineNumberOfFiles.cxx  dvNumberOfSequentialFiles.cxx  dvProgress.cxx  dvRapidJSONHelper.cxx  dvSegmentationView.cxx  dvStringOperations.cxx  dvWireFrame.cxx
src/tests/: dvCycleTest.cxx  dvCyclicMeanTest.cxx  dvGlobFilesTest.cxx  dvHeapTest.cxx  dvJoinTest.cxx  dvProgressTest.cxx  dvReverseFindIfTest.cxx  dvSortTest.cxx  dvStringOperationsTest.cxx  dvTriangleAspectRatioRegularizerTest.cxx  dvVectorOperationsTest.cxx  dvXORSwapTest.cxx
src/utils/: dv-assign-materials-to-mesh-faces.cxx  dv-change-information-3d.cxx  dv-change-labels.cxx  dv-collapse-4d.cxx  dv-convert-dicom-series-to-volume.cxx  dv-convert-mesh.cxx  dv-enforce-boundary-between-labels.cxx  dv-extract-connected-components.cxx  dv-fill-holes-in-segmentation.cxx  dv-flip-along-axes.cxx  dv-label-geometry.cxx  dv-mesh-area-volume.cxx  dv-mesh-similarity-vertex-distance.cxx  dv-read-dicom-tag.cxx  dv-scale-mesh.cxx  dv-translate-mesh.cxx  dv-window-image.cxx
tests/: CMakeLists.txt  dvCameraStateTest.cxx  dvCyclicMeanTest.cxx  dvDeleteIsolatedPointsTest.cxx  dvHeapTest.cxx  dvMathTest.cxx  dvMeshToQuadEdgeMeshTest.cxx  dvProgressTest.cxx  dvReverseFindIfTest.cxx  dvSmartPointerTest.cxx  dvSoftMaxTest.cxx  dvVisualizeMeshesFrameTest.cxx  dvXORSwapTest.cxx
tests/src/: dvAccelerationRegularizerTest.cxx  dvAdditiveGaussianNoiseMeshFilterCellDataTest.cxx  dvCuberilleQuadEdgeMeshTest.cxx  dvCycleTest.cxx  dvDecimationQuadEdgeMeshFilterCellDataTest.cxx  dvDelaunayConformingQuadEdgeMeshFilterCellDataTest.cxx  dvEdgeLengthRegularizerTest.cxx  dvGenerateInitialModelTest.cxx  dvGetListOfColorsTest.cxx  dvGlobFilesTest.cxx  dvITKTriangleMeshToVTKPolyDataTest.cxx  dvJoinTest.cxx  dvLabeledITKPointSetReaderTest.cxx  dvLabeledITKPointSetToPointSetMapTest.cxx  dvLabeledITKPointSetWriterTest.cxx  dvLabeledVTKPointSetReaderTest.cxx  dvMathTest.cxx  dvMeshToQuadEdgeMeshTest.cxx  dvMeshViewTest.cxx  dvPolyDataWriterCellDataTest.cxx  dvProgressTest.cxx  dvRefineThenLoopTest.cxx  dvRefineValenceThreeVerticesTest.cxx  dvReverseFindIfTest.cxx  dvSegmentationToLabeledPointSetTest.cxx  dvSegmentationViewTest.cxx  dvSortTest.cxx  dvStringOperationsTest.cxx  dvSubdivisionCellDataTest.cxx  dvTextViewTest.cxx  dvTriangleAspectRatioRegularizerTest.cxx  dvVTKPolyDataToITKTriangleMeshTest.cxx  dvVectorOperationsTest.cxx  dvVisualizeMeshesInteractorStyleTest.cxx
tests/testdata/: labeled-point-set.txt
utils/: dv-add-mesh-noise.cxx  dv-anisotropic-smoothing.cxx  (+45 more)
